--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ body { margin:0; padding:0; }
 .map-overlay .legend .bar {
   height: 10px;
   width: 100%;
-  background: linear-gradient(to right, #FCA107, #7F3121);
+  background: linear-gradient(to right, rgb(141, 171, 255), rgb(40, 40, 255), rgb(0, 255,0), rgb(255, 255,0), rgb(255, 0, 0));
 }
 
 .map-overlay input {
