--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,8 @@ p {
 
 #map { position:absolute; top:0; bottom:0; width:100%; }
 #menu {
-  background: rgba(200, 200, 200, 1);
+  /* When selected layer is not active */
+  background: rgba(200,200,200, 0.8);
   position: absolute;
   z-index: 1;
   top:150px;
@@ -30,7 +31,7 @@ p {
   position: absolute;
   bottom: 50px;
   right: 25px;
-  background: rgba(200, 200, 200, 0.8);
+  background: rgba(255, 255, 255, 1);
   padding: 10px;
   font-family: 'Open Sans', sans-serif;
   }
@@ -38,9 +39,9 @@ p {
   font-size: 15px;
   display: block;
   margin: 0px;
-  border-color: rgba(200, 200, 200, 0.8);
-  outline-color: rgba(200, 200, 200, 0.8);
-  -webkit-border-before-color: rgba(200, 200, 200, 1);;
+  border-color: rgba(200, 200, 200, 0.4);
+  outline-color: rgba(200, 200, 200, 0.4);
+  -webkit-border-before-color: rgba(200, 200, 200, 0.4);;
   padding: 5px;
   text-decoration: none;
   border-bottom: 1px solid rgba(0,0,0,0.25);
@@ -55,11 +56,12 @@ p {
 }
 
 #menu a:hover {
-  color: rgba(200, 200, 200, 1);
+  color: rgba(255, 255, 255, 1);
 }
 
 #menu a.active {
-  background-color: rgba(200, 200, 200, 1);
+  /* When selected layer is active */
+  background-color: rgba(255, 255, 255, 1);
 }
 
 #menu a.active:hover {
@@ -77,7 +79,7 @@ p {
 .intro-header {
   font: 18px/25px 'Helvetica Neue', Arial, Helvetica, sans-serif;
   position: absolute;
-  background-color: rgba(200, 200, 200, 1);
+  background-color: rgb(255, 255, 255);
   width: 200px;
   height: 130px;
   bottom: 10px;
@@ -102,7 +104,7 @@ p {
 /**Bottom two legend boxes
 */
 .map-overlay .map-overlay-inner {
-  background-color: rgba(200, 200, 200, 1);
+  background-color: rgba(255, 255, 255, 1);
   box-shadow:0 1px 2px rgba(0, 0, 0, 0.20);
   border-radius: 3px;
   padding: 5px;
@@ -113,12 +115,6 @@ p {
   line-height: 18px;
   display: block;
   margin: 0 0 5px;
-}
-
-.map-overlay .legend .bar {
-  height: 8px;
-  width: 100%;
-  background: linear-gradient(to right, rgb(141, 171, 255), rgb(40, 212, 255), rgb(0, 255,0), rgb(255, 255,0), rgb(255, 200, 0));
 }
 
 .map-overlay input {
