--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ p {
   border-radius: 3px;
 }
 .intro-header {
-  font: 18px/25px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font: 18px/25px 'Avant Garde', Arial, Helvetica, sans-serif;
   position: absolute;
   background-color: rgb(255, 255, 255);
   width: 200px;
@@ -91,7 +91,7 @@ p {
   top: 0;
   height: 130px;
   margin-top: 5px;
-  width: 450px;
+  width: 325px;
 }
 
 .legend-key {
